# api/swagger.json
@@ -20,7 +20,51 @@
         "tags": [
           "permission"
         ],
-        "parameters": [],
+        "parameters": [
+          {
+            "name": "include",
+            "type": "array",
+            "in": "query",
+            "items": {
+              "type": "string",
+              "enum": [
+                "roles",
+                "parent",
+                "children",
+                "platform"
+              ]
+            }
+          },
+          {
+            "name": "_perPage",
+            "type": "integer",
+            "in": "query"
+          },
+          {
+            "name": "_page",
+            "type": "integer",
+            "in": "query"
+          },
+          {
+            "name": "_sortField",
+            "type": "string",
+            "in": "query"
+          },
+          {
+            "name": "_sortDir",
+            "type": "string",
+            "in": "query",
+            "enum": [
+              "ASC",
+              "DESC"
+            ]
+          },
+          {
+            "name": "_filters",
+            "type": "string",
+            "in": "query"
+          }
+        ],
         "responses": {
           "200": {
             "$ref": "#/responses/Success"
